apps/base/nextclloud/nextcloud-headless-service.yaml
# base/nextcloud-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-headless
  labels:
    app: nextcloud
spec:
  ports:
    - port: 80
      name: http
  clusterIP: None # This makes it a headless service
  selector:
    app: nextcloud # Matches the labels of your StatefulSet pods
  # No type specified, defaults to ClusterIP
  # This service is used for internal communication between Nextcloud pods
  # and the database, and is not exposed outside the cluster.
  # It allows Nextcloud pods to discover each other and the database service.
  # This is useful for stateful applications like Nextcloud that may need
  # to communicate with multiple instances of themselves or with a database.
